# volesti-rs

./: BLOG.md  CHANGELOG.md  Cargo.toml  DEVLOG.md  GSOC'26.md  LICENSE-MIT  README.md  TESTING.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
src/: error.rs  lib.rs
src/finance/: copula.rs  mod.rs  portfolio.rs
src/geometry/: hpolytope.rs  mod.rs  point.rs  shapes.rs
src/polytope/: hpolytope.rs  point.rs  shapes.rs
src/samplers/: ball_walk.rs  mod.rs  portfolio.rs
tests/: equivalence_test.rs  statistical_test.rs  unit_tests.rs
